Enabling tmux mouse mode, and add on/off bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,3 +2,39 @@
 set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
+
+################################################################################
+# Mouse Mode
+
+# Enable mousing by default
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
+# Toggle mouse on with <prefix> m
+bind m \
+    set -g mode-mouse on \;\
+    set -g mouse-resize-pane on \;\
+    set -g mouse-select-pane on \;\
+    set -g mouse-select-window on \;\
+    display 'Mouse: ON'
+#    last-window \;\
+#    swap-pane -s tmux-zoom.0 \;\
+#    kill-window -t tmux-zoom \;\
+
+# Toggle mouse off with <prefix> M
+bind M \
+    set -g mode-mouse off \;\
+    set -g mouse-resize-pane off \;\
+    set -g mouse-select-pane off \;\
+    set -g mouse-select-window off \;\
+    display 'Mouse: OFF'
+#    new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
+#    swap-pane -s tmux-zoom.0 \;\
+#    select-window -t tmux-zoom \;\
+
+# Hint, use <prefix> z, to zoom into a pane, and repeat to zoom out (for copy with mouse)
+# Also, in iterm2, holding option disables mousing temporarily
+
+################################################################################
