tmux mouse mode off by default

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,13 +4,7 @@ unbind-key C-b
 bind-key C-a send-prefix
 
 ################################################################################
-# Mouse Mode
-
-# Enable mousing by default
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+# Mouse Mode [off on tmux start]
 
 # Toggle mouse on with <prefix> m
 bind m \
